Integrate Signal 5.24.14